# Aphelion-Reasearch

./: .env.example  .gitignore  AGENTS.md  APHELION_PHASE23_TUI_SUPREME.md  DATA_REORGANIZATION.md  HOW_TO_USE.md  README.md  aphelion.py  aphelion_data.py  pyproject.toml  pytest_out2.txt  pytest_phase3.txt  pytest_phase4_2.txt  requirements.txt  run_paper.py  runall.py  train_hydra.py
.claude/: settings.local.json
aphelion/: __init__.py  gold_feature_pack_extra.py
aphelion/ares/: __init__.py  coordinator.py  journal.py  reasoner.py
aphelion/backtest/: __init__.py  analytics.py  broker_sim.py  engine.py  metrics.py  monte_carlo.py  order.py  portfolio.py  walk_forward.py
aphelion/core/: __init__.py  clock.py  config.py  data_layer.py  event_bus.py  registry.py
aphelion/evolution/: __init__.py  auto_optimizer.py
aphelion/features/: __init__.py  cointegration.py  cross_impact.py  engine.py  halftrend.py  market_structure.py  microstructure.py  mtf.py  registry.py  sessions.py  signature.py  volume_profile.py  vwap.py
aphelion/filters/: __init__.py  kalman.py
config/: aphelion.default.json  aphelion.json
docs/: PAPER_TRADING_SETUP.md  README.md  REPOSITORY_STRUCTURE.md
notebooks/: COLAB_SINGLE_CELL.py  HYDRA_COLAB_TRAINING.ipynb
reports/: VERIFICATION_REPORT.md
scripts/: data_collector.py  export_mt5_data.py  smoke_test_hydra_pipeline.py  smoke_test_mt5pipe_integration.py  train_hydra.py  train_hydra_tiny.py
tests/: test_almgren_chriss.py  test_e2e_training.py  test_hmm_regime.py  test_kalman.py
website/: .gitignore  next.config.ts
(+393 files in other folders)
